src/regression/parse_pool/progtest9.sfp.out

sfc in program: parse_pool/progtest9.sfp
syntax error at 3 at line:
event-condition bar { timer == 8192 }
                             ^
