src/regression/parse_pool/progtest9.sfp
# Testing erroneous program definition (invalid operator)
configuration foo { nothing nothing }
event-condition bar { timer == 8192 }
start hello

